--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,8 +35,8 @@
 html,
 body,
 .mainBody {
-    min-height: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: auto;
 }
 
 .mainBody {
@@ -44,6 +44,10 @@ body,
     color: var(--color-text-m);
     background-color: var(--bg-app);
     transition: color var(--transition), background-color var(--transition);
+}
+
+.error-msg{
+    text-align: center;
 }
 
 img {
@@ -61,7 +65,7 @@ img {
 
 .image {
     width: 100%;
-    height: 50%;
+    height: 55%;
 }
 
 .country {
@@ -73,6 +77,12 @@ img {
     max-width: 310px;
     max-height: 300px;
     transition: background-color var(--transition), box-shadow var(--transition);
+    transition: transform 450ms;
+}
+
+.country:hover{
+    cursor: pointer;
+    transform: scale(1.08);
 }
 
 .content {
