added search filter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="mainBody" [attr.data-theme]="darkTheme ? 'dark' : 'light'">
     <app-header (dark)="dark($event)"></app-header>
-    <app-landing-page></app-landing-page>
+    <router-outlet></router-outlet>
 </div>
