--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,42 +7,61 @@
     <div class="search">
       <i class="fas fa-search"></i>
       <form>
-        <input type="text" placeholder="{{ staticContent.searchBar }}" />
+        <input
+          type="text"
+          name="search"
+          autocomplete="off"
+          placeholder="{{ staticContent.searchBar }}"
+          [(ngModel)]="searchData"
+          #input
+          (keyup)="onSearch(input.value)"
+        />
       </form>
     </div>
     <div class="region-list" (click)="regionToggle()">
-      {{ (selectedRegion === '') ? staticContent.filter : selectedRegion }} <i class="fas fa-chevron-down arrow-down"></i>
+      {{ selectedRegion === "" ? staticContent.filter : selectedRegion }}
+      <i class="fas fa-chevron-down arrow-down"></i>
       <div class="regions" *ngIf="showRegions">
-        <ul *ngFor="let region of dataList.regionList; let i = index" (click)="regionSelect(dataList.regionList[i].label)">
+        <ul
+          *ngFor="let region of dataList.regionList; let i = index"
+          (click)="regionSelect(dataList.regionList[i].label)"
+        >
           <li>{{ region.label }}</li>
         </ul>
       </div>
     </div>
   </div>
-
   <div class="countries">
+    <div class="error-msg" *ngIf="listError">
+      <i class="fas fa-exclamation-triangle"></i>
+      {{ staticContent.blankList }}
+    </div>
     <div
+      routerLinkActive="active"
       class="country"
       *ngFor="let countryModel of countryList; let i = index"
     >
-      <div class="image">
-        <img src="{{ countryModel.country.image }}" alt="country-image" />
-      </div>
-      <div class="content">
-        <div class="name">
-          {{ countryModel.country.name }}
+      <!-- <a routerLink="/country"> -->
+        <div class="image">
+          <img src="{{ countryModel.country.image }}" alt="country-image" />
         </div>
-        <div class="population">
-          Population :
-          <span>{{ numberWithCommas(countryModel.country.population) }}</span>
+        <div class="content">
+          <div class="name">
+            {{ countryModel.country.name }}
+          </div>
+          <div class="population">
+            Population :
+            <span>{{ numberWithCommas(countryModel.country.population) }}</span>
+          </div>
+          <div class="region">
+            Region : <span>{{ countryModel.country.region }}</span>
+          </div>
+          <div class="capital">
+            Capital : <span>{{ countryModel.country.capital }}</span>
+          </div>
         </div>
-        <div class="region">
-          Region : <span>{{ countryModel.country.region }}</span>
-        </div>
-        <div class="capital">
-          Capital : <span>{{ countryModel.country.capital }}</span>
-        </div>
-      </div>
+      <!-- </a> -->
     </div>
   </div>
 </main>
+<router-outlet></router-outlet>
