removed unnecessary code

--- a/src/app/components/country-details/country-details.component.html
+++ b/src/app/components/country-details/country-details.component.html
@@ -42,7 +42,7 @@
         <div class="border-countries">
           Border Countries:
           <span>
-            <div *ngFor="let border of countryModel.country.border" (click)="onBorderSelect(border)">{{ border }}</div>
+            <div *ngFor="let border of countryModel.country.border">{{ border }}</div>
           </span>
         </div>
       </div>
