--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -69,3 +69,7 @@
   </div>
 </main>
 <router-outlet></router-outlet>
+<ng-http-loader 
+    [opacity]="'0.8'"
+    [spinner]="spinnerStyle.skChasingDots">
+</ng-http-loader>
